[package]
name = "rudanmaku"
authors = ["4t145"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[dependencies]
toml = "0.5.9"
serde = "1.0"
serde_json = "1.0.79"
futures-util = "*"
chrono = "*"
env_logger = "0.10.0"
log = "0.4.13"
diesel = { version = "2.0.3", features = ["postgres", "chrono", "r2d2"] }
[dependencies.tokio-tungstenite]
version = "0.18.0"

[dependencies.tokio]
version = "1.24.1"
features = ["full"]


[dependencies.bilive-danmaku]

git = "https://github.com/4t145/bilive-danmaku"
branch = "master"

features = ["json", "bincode"]

[dependencies.mongodb]
version = "2.3.1"
features = ["tokio-runtime"]
